# orka

./: .gitignore  .gitleaks.toml  AGENTS.md  LICENSE  Makefile  README.md  example.env  llms-full.txt  llms.txt  pyproject.toml
.continue/rules/: architecture-doc.mdc  session-checkpoints.mdc  session-protocol.mdc  testing-workflow.mdc
.githooks/: pre-push
.kilo/: .gitignore  run-script.sh  setup-script.sh
.kilo/agent/: locator.md  reviewer-architecture.md  reviewer-safety.md  surgeon.md
.kilo/command/: review.md
docs/: ARCHITECTURE.md  FLOW_CONTROL.md  ROADMAP.md  SECURITY_AUDIT.md
docs/benchmark/: README.md
docs/checkpoints/: 20250216_data_construction_guide_phase1.md  20250527_detect_secrets_baseline.md  20250527_readme_finalized.md  20250527_settings_and_client_factory.md  20250527_standalone_package_refactor.md  20250612_surgery_graph_operational.md  20250613_prompt_layout_fixes.md  20250615_security_hardening.md  20250620_e2e_smoke_test.md  20260611_class_context_and_validator.md  20260611_gen_command_and_templates.md  20260611_prompt_compiler_phase1.md  20260612_compile_prompt_node_added.md  20260612_surgery_graph_built.md  20260612_testgen_command_and_prompt_compiler_fix.md  20260612_testgen_prompt_rename_path_leak.md  20260613_jinja2_removed_placeholder_engine.md  20260613_phase2_gag_implemented.md  20260615_adversarial_test_suite.md  20260615_dogfooding_debrief_and_bugfix_prompt.md  20260615_dogfooding_testgen_snippet_import_extractor.md  20260615_headless_convergence.md
orka/: cli.py  clients.py  config.py  orchestrator.py
orka/core/: cascade.py  (+17 more)
(+70 files in other folders)
